--- a/gw-dissertation.cls
+++ b/gw-dissertation.cls
@@ -37,68 +37,54 @@
 \RequirePackage[document]{ragged2e}  % makes text flushed left and ragged right
 \RequirePackage{fancyhdr}  % helps to control layout of the footers and headers
 \RequirePackage{etoolbox}  % provides some commands for defining robust macros
-\RequirePackage[utf8]{inputenc}  % tells compiler the files are written in utf-8 text
 \RequirePackage[T1]{fontenc}  % use 8bit encoded fonts
 \RequirePackage[no-math]{fontspec}  % allows us to use .ttf or .otf fonts
 \RequirePackage{unicode-math}  % allows using unicode for math symbols and ISO math standard
-\RequirePackage{biblatex}  % a modern alternative to bibtex for processing bibliography 
-\RequirePackage{setspace}  % provides convenient commands to switch line spacing
+\RequirePackage{biblatex}  % a modern alternative to bibtex for processing bibliography
 \RequirePackage[dvipsnames]{xcolor}  % provides ways to colorize words (must before hyperref)
 \RequirePackage{hyperref}  % helps creating internal/external hyperlinks
 \RequirePackage{arrayjobx}  % provides arrays for holding information of committee members
 \RequirePackage{multido}  %  provides a for-loop like command (multido)
-\RequirePackage{tocloft}  % fine tunes loc, lof, and lot
-
-
-% =================================================================================================
-% private variables
-% =================================================================================================
-\renewrobustcmd*{\@title}{\{Dissertation Title\}}  % default value for dissertation title
-\renewrobustcmd*{\@author}{\{Author\}}  % default value for author
-\newrobustcmd*{\@defdate}{\{Defense date\}}  % default value for defense date
-\newrobustcmd*{\@gradyear}{\{Graduation year\}}  % default value for graduation year
-\newrobustcmd*{\@gradmonth}{\{Graduation month\}}  % default value for graduation month
-\newrobustcmd*{\@graddate}{\{Graduation date\}}  % default value for graduation date
-\newrobustcmd*{\@advisor}{\{Advisor's Name\}\\\{Advisor's title\}}  % default value for adviser
-\newrobustcmd*{\@school}{\{Name of your school\}}  % default value for school name
-\newrobustcmd{\@dedication}{\{Dedication body\}}  % default content in dedication page
-\newrobustcmd{\@acknowledgments}{\{Acknowledgment body\}}  % default content in acknowledgment page
-\newrobustcmd{\@disclaimer}{\{Disclaimer body\}}  % default content in disclaimer page
-\newrobustcmd{\@abstract}{\{Abstract body\}}  % default content in abstract page
-
-% use an array to hold previous degree
-\newcounter{@prevdegreecounter}
-\setcounter{@prevdegreecounter}{1}
-\newarray\@prevdegrees
-\@prevdegrees(\the@prevdegreecounter)={Insert at least a bachelor's degree}
-
-% use an array to hold committee members
-\newcounter{@committeecounter}
-\setcounter{@committeecounter}{1}
-\newarray\@committees
-\@committees(\the@committeecounter)={Insert at least one committee member}
-
-\newlength\@oldindent  % holding users' previous indent length
+\RequirePackage[titles]{tocloft}  % fine tunes loc, lof, and lot
+\RequirePackage{enumitem}  % fine tunes enumeration/lists
+\RequirePackage{nomencl}  % to have a list of symbols
+\RequirePackage{indentfirst}
 
 
 % =================================================================================================
 % public options
 % =================================================================================================
+\newif\ifshowtitle  % whether to show the title page
+\newif\ifshowcertification  % whether to show the certification page
+\newif\ifshowcopyright  % whether to show the copyright page
 \newif\ifshowdedication  % whether to show the dedication page
 \newif\ifshowacknowledgments  % whether to show the acknowledgments page
 \newif\ifshowdisclaimer  % whether to show the disclaimer page
+\newif\ifshowabstract  % whether to show the abstract page
+\newif\ifshowtoc  % whether to show toc (table of contents)
 \newif\ifshowlof  % whether to show lof (list of figures)
 \newif\ifshowlot  % whether to show lot (list of tables)
+\newif\ifshowlos  % whether to show los (list of symbols and abbreviations)
+\newif\ifshowglossary  % whether to show glossary of terms
+\newif\ifshowpreface  % whether to show preface
 
 
 % =================================================================================================
 % default values for public options
 % =================================================================================================
-\showdisclaimerfalse  % will be automatically turned on if users provide disclaimer
-\showdedicationfalse  % will be automatically turned on if users provide dedication
-\showacknowledgmentsfalse  % will be automatically turned on if users provide acknowledge
-\showloftrue
-\showlottrue
+\showtitletrue  % required; could be disabled for debug
+\showcertificationtrue  % required; could be disabled for debug
+\showcopyrighttrue  % optional
+\showdedicationfalse  % will be automatically turned on if users call \dedication
+\showacknowledgmentsfalse  % will be automatically turned on if users call \acknowledgements
+\showdisclaimerfalse  % will be automatically turned on if users call \disclaimer
+\showabstracttrue  % required; could be disabled for debug
+\showtoctrue  % required; could be disabled for debug
+\showloftrue  % required only when there are figures
+\showlottrue  % required only when there are tables
+\showlostrue  % optional
+\showglossarytrue  % optional
+\showprefacefalse  % optional; will be turned on automatically if users call \preface
 
 
 % =================================================================================================
@@ -119,12 +105,60 @@
 \newrobustcmd{\acknowledgments}[1]{\renewrobustcmd{\@acknowledgments}{{#1}}\showacknowledgmentstrue}
 \newrobustcmd{\disclaimer}[1]{\renewrobustcmd{\@disclaimer}{{#1}}\showdisclaimertrue}
 \renewrobustcmd{\abstract}[1]{\renewrobustcmd{\@abstract}{{#1}}}
+\newrobustcmd{\preface}[1]{\renewrobustcmd{\@preface}{{#1}}\showprefacetrue}
 
 % the author's previous degrees
 \newrobustcmd*{\prevdegree}[1]{\@prevdegrees(\the@prevdegreecounter)={#1}\stepcounter{@prevdegreecounter}}
 
 % committee members
 \newrobustcmd*{\committee}[1]{\@committees(\the@committeecounter)={#1}\stepcounter{@committeecounter}}
+
+% line spacing
+\newrobustcmd*{\singlespacing}{\renewcommand{\baselinestretch}{\@factor@single}\selectfont}
+\newrobustcmd*{\doublespacing}{\renewcommand{\baselinestretch}{\@factor@double}\selectfont}
+
+
+% =================================================================================================
+% private variables
+% =================================================================================================
+\renewrobustcmd*{\@title}{\{Dissertation Title\}}  % default value for dissertation title
+\renewrobustcmd*{\@author}{\{Author\}}  % default value for author
+\newrobustcmd*{\@defdate}{\{Defense date\}}  % default value for defense date
+\newrobustcmd*{\@gradyear}{\{Graduation year\}}  % default value for graduation year
+\newrobustcmd*{\@gradmonth}{\{Graduation month\}}  % default value for graduation month
+\newrobustcmd*{\@graddate}{\{Graduation date\}}  % default value for graduation date
+\newrobustcmd*{\@advisor}{\{Advisor's Name\}\\\{Advisor's title\}}  % default value for adviser
+\newrobustcmd*{\@school}{\{Name of your school\}}  % default value for school name
+\newrobustcmd{\@dedication}{\{Dedication body\}}  % default content in dedication page
+\newrobustcmd{\@acknowledgments}{\{Acknowledgment body\}}  % default content in acknowledgment page
+\newrobustcmd{\@disclaimer}{\{Disclaimer body\}}  % default content in disclaimer page
+\newrobustcmd{\@abstract}{\{Abstract body\}}  % default content in abstract page
+\newrobustcmd{\@preface}{\{Preface body\}}  % default content in preface page
+
+% use an array to hold previous degree
+\newcounter{@prevdegreecounter}
+\setcounter{@prevdegreecounter}{1}
+\newarray\@prevdegrees
+\@prevdegrees(\the@prevdegreecounter)={Insert at least a bachelor's degree}
+
+% use an array to hold committee members
+\newcounter{@committeecounter}
+\setcounter{@committeecounter}{1}
+\newarray\@committees
+\@committees(\the@committeecounter)={Insert at least one committee member}
+
+% single-line spacing factor: 0.9875 * 1.208 ~ 1.185 = single-line spacing scale in Microsoft Word
+\newrobustcmd*{\@factor@single}{0.9875}
+
+% double-line spacing factor: 1.928 * 1.208 ~ 2.33 = double-line spacing scale in Microsoft Word
+\newrobustcmd*{\@factor@double}{1.928}
+
+
+% =================================================================================================
+% private macros/functions
+% =================================================================================================
+% a macro returning a string that will be added to ToC and the PDF's bookmarks
+\newrobustcmd*{\@addanchor}[2]{\phantomsection\addcontentsline{toc}{#1}{#2}}%
 
 
 % =================================================================================================
@@ -139,11 +173,14 @@
 \geometry{right=1.25in}
 \geometry{footskip=0.25in}  % guideline isn't clear it's 0.5 or 0.75in from bottom
 
-% default line spacing
+% default is double-line spacing
 \doublespacing
 
-% paragraph spacing (extra 0.4 lines on top of double-line spacing; not mentioned in guideline);
-\setlength{\parskip}{0.4\baselineskip}
+% skips between paragraphs
+\setlength{\parskip}{0pt}
+
+% indent (package ragged2e handles indentation after \begin{document})
+\setlength{\RaggedRightParindent}{0.5in}
 
 % header and footer styles
 \pagestyle{fancy}  % use fancyhdr's fancy page style
@@ -152,8 +189,32 @@
 \renewcommand{\headrulewidth}{0pt}  % make header separation line invisible
 \renewcommand{\footrulewidth}{0pt}  % make footer separation line invisible
 
-% indentation
-\setlength{\parindent}{0.5in}
+% force the heading counter visible in text and ToC up to subparagraph
+\setcounter{secnumdepth}{5}
+\setcounter{tocdepth}{5}
+
+% chapter heading format
+\renewcommand{\@makechapterhead}[1]{%
+    \singlespacing%
+    \begin{Center}\textbf{\chaptername\space\thechapter\ --\ #1}\end{Center}\par%
+    \doublespacing%
+}
+
+% chapter(with a star) heading format
+\renewcommand{\@makeschapterhead}[1]{%
+    \singlespacing\begin{Center}\textbf{#1}\end{Center}\par\doublespacing%
+}
+
+% heading formats for others
+\renewcommand{\section}{\@startsection{section}{1}{\z@}{\z@}{1sp}{\singlespacing\bfseries}}
+\renewcommand{\subsection}{\@startsection{subsection}{1}{0.25in}{\z@}{1sp}{\singlespacing\bfseries}}
+\renewcommand{\subsubsection}{\@startsection{subsubsection}{1}{0.5in}{\z@}{1sp}{\singlespacing\bfseries}}
+\renewcommand{\paragraph}{\@startsection{paragraph}{1}{0.75in}{\z@}{1sp}{\singlespacing\bfseries}}
+\renewcommand{\subparagraph}{\@startsection{subparagraph}{1}{1in}{\z@}{1sp}{\singlespacing\bfseries}}
+
+% removing extra \addvspace command in LoF and LoT when issuing \chapter
+\patchcmd{\Hy@org@chapter}{\addtocontents{lof}{\protect\addvspace{10\p@}}}{}{}{}
+\patchcmd{\Hy@org@chapter}{\addtocontents{lot}{\protect\addvspace{10\p@}}}{}{}{}
 
 % allowed fonts
 \listadd{\@allowedfonts}{P052}
@@ -180,9 +241,7 @@
 \setmonofont{DejaVu Sans Mono}  % monospace (typewritter) family
 
 
-% =================================================================================================
 % math equation style configuration
-% =================================================================================================
 \unimathsetup{math-style=ISO}
 \unimathsetup{bold-style=ISO}
 \unimathsetup{sans-style=italic}
@@ -191,313 +250,251 @@
 \unimathsetup{warnings-off={mathtools-colon, mathtools-overbracket}}
 \setmathfont{texgyrepagella-math.otf}
 
-% =================================================================================================
-% hyperlinks of PDF bookmarks. By default, hyperlinks are set to be the
-% displayed counters of parts, chapters, etc. When we reset the displayed
-% counters, it makes different chapters, for example, share the same hyperlinks
-% (because both have the same displayed counter value). We need to make them
-% independent to displayed counters because we will reset displayed chapter
-% counter for appendices. Only parts and chapters have to be handled because
-% section, subsection, etc., by default, are prefixed with chapters' hyperlink
-% names, meaning as long as chapters' hyperlinks are unique, their hyperlinks
-% are also unique.
-% =================================================================================================
+% make sure the hyperlink IDs of chapters and parts are unique even when we restart the counter
+% (we restart the counter because appendicies)
 \renewcommand{\theHpart}{HPART\thepage}
 \renewcommand{\theHchapter}{HCHAP\thepage}
 
+% trigger nomenclature generation
+\makenomenclature
 
 % =================================================================================================
-%% special pages' configurations
+%% front matter: title page
 % =================================================================================================
-
-% custom title page
-% -----------------------------------------------
-\renewrobustcmd*{\titlepage}{%
-    % temporarily change the layout: title starts from 2in below the paper edge
+\newrobustcmd*{\@titlepage}{%
     \newgeometry{top=2in, bottom=1in, left=1.25in, right=1.25in}%
-    % the title page is counted as page i (in roman numeral system)
-    \pagenumbering{roman}%
-    % but GW doesn't want this page number to show in this title page
-    \thispagestyle{empty}%
-    % add a bookmark manually so hyperref knows what page this is
-    \phantomsection%
-    % add this page's book mark to PDF's data so PDF viewers know where this page is
-    \pdfbookmark[0]{Title Page}{\thepage}%
-    % all things on this page are center-aligned
-    \begin{singlespace}%
-        \begin{center}%
-            % title: boldface, 12pt, followed by a 3-line space
-            {\normalsize\textbf{\@title}}\\*[3\baselineskip]%
-            % author: 12pt, follow by a 3-line space
-            by \@author\\*[3\baselineskip]%
-            % loop over previous degrees
-            \multido{\i=1+1}{10}{%
-                \check@prevdegrees(\i)%
-                \ifemptydata%
-                    \multidostop%
-                \else%
-                    \cachedata\\%
-                \fi%
-            }
-            % add a 2-line space after all previous degrees
-            \vspace{2\baselineskip}%
-            % submission info header: 12pt followed by 3-line space
-            A Dissertation submitted to:\\*[3\baselineskip]%
-            % submission info (line breaks are hard-coded): followed by 3-line space
-            The Faculty of\\%
-            The \@school~\\%
-            of The George Washington University\\%
-            in partial satisfaction of the requirements\\%
-            for the degree of Doctor of Philosophy\\*[3\baselineskip]%
-            % degree conferral date: 12pt followed by 3-line space
-            \@gradmonth, \@graddate, \@gradyear\\*[3\baselineskip]%
-            % advisor: 12pt followed by 3-line space
-            Dissertation directed by\\*[\baselineskip]%
-            \@advisor\\%
-        \end{center}%
-    \end{singlespace}%
-    % restore to default page layout
+    \pagenumbering{roman}  % the title page is counted as page i (in roman numeral system)
+    \thispagestyle{empty}  % however, don't actually show the page number at the bottom
+    \pdfbookmark[0]{Title Page}{TitlePage}%
+    \begingroup%
+    \Centering%
+    \singlespacing%
+    \textbf{\@title}\\[3\baselineskip]%
+    \textbf{by \@author}\\[3\baselineskip]%
+    \multido{\i=1+1}{10}{%
+        \check@prevdegrees(\i)\ifemptydata\multidostop\else\cachedata\\\fi%
+    }
+    \vskip 2\baselineskip%
+    A Dissertation submitted to\par\vskip 3\baselineskip
+    The Faculty of\\%
+    The \@school~\\%
+    of The George Washington University\\%
+    in partial fulfillment of the requirements\\%
+    for the degree of Doctor of Philosophy\\[3\baselineskip]%
+    \@gradmonth, \@graddate, \@gradyear\\[3\baselineskip]%
+    Dissertation directed by\\[\baselineskip]%
+    \@advisor\\%
+    \endgroup%
     \restoregeometry%
 }
 
-% certification page
-% -----------------------------------------------
-\newrobustcmd*{\certpage}{%
-    % force the layout, so users' original layouts don't matter
-    \newgeometry{top=1in, bottom=1in, left=1.25in, right=1.25in}%
-    % add a bookmark manually so hyperref knows what page this is
-    \phantomsection%
-    % add this page's book mark to PDF's data so PDF viewers know where this page is
-    \pdfbookmark[0]{Certification}{\thepage}%
-    \begin{doublespace}
-        % required text
-        \noindent%
-        The \@school~of The George Washington %
-        University certifies that \@author~has passed the Final %
-        Examination for the degree of Doctor of Philosophy as of \@defdate. %
-        This is the final and approved form of the dissertation.
-    \end{doublespace}
-    \begin{singlespace}%
-        \vspace*{3\baselineskip}%
-        % title and author
-        \begin{center}%
-            \textbf{\@title}\\[3\baselineskip]%
-            \@author\\[3\baselineskip]%
-        \end{center}%
-        % committee members
-        Dissertation Research Committee:\\%
-        \begin{itemize}[leftmargin=0.5in, topsep=0pt]%
-            \multido{\i=1+1}{10}{%
-                \check@committees(\i)%
-                \ifemptydata\multidostop\else\item[]\cachedata\fi%
-            }%
-        \end{itemize}%
-    \end{singlespace}
-    % restore to users' original page layout
-    \restoregeometry%
+% =================================================================================================
+% front matter: certification page
+% =================================================================================================
+\newrobustcmd*{\@certpage}{%
+    \newpage%
+    \pdfbookmark[0]{Certification}{CertPage}%
+    \begingroup%
+    \doublespacing%
+    \noindent%
+    The \@school~of The George Washington University certifies that \@author~has passed the
+    Final Examination for the degree of Doctor of Philosophy as of \@defdate. This is the final
+    and approved form of the Dissertation.\par%
+    \endgroup%
+    \begingroup%
+    \singlespacing%
+    \vskip 3\baselineskip%
+    \begin{center}%
+        \textbf{\@title}\\[3\baselineskip]%
+        \@author\\[3\baselineskip]%
+    \end{center}%
+    Dissertation Research Committee:\\[1\baselineskip]%
+    \begin{itemize}[leftmargin=0.5in, topsep=0pt]%
+        \multido{\i=1+1}{10}{
+        \check@committees(\i)%
+        \ifemptydata\multidostop\else\item[]\cachedata\fi%
+    }%
+    \end{itemize}%
+    \endgroup%
 }
 
-% copyright page
-% -----------------------------------------------
-\newrobustcmd*{\copyrightpage}{%
-    % force the layout, so users' original layouts don't matter
-    \newgeometry{top=1in, bottom=1in, left=1.25in, right=1.25in}%
-    % add a bookmark manually so hyperref knows what page this is
-    \phantomsection%
-    % add this page's book mark to PDF's data so PDF viewers know where this page is
-    \pdfbookmark[0]{Copyright}{\thepage}%
-    \begin{singlespace}
-        % let latex automatically determine how much vertical space it needs
-        \vspace*{\fill}%
-        % copyright text
-        \begin{center}%
-            © Copyright \@gradyear~by \@author\\%
-            All rights reserved%
-        \end{center}%
-        % let latex automatically determine how much vertical space it needs
-        \vspace*{\fill}%
-    \end{singlespace}
-    % restore to users' original page layout
-    \restoregeometry%
+% =================================================================================================
+% front matter: copyright page
+% =================================================================================================
+\newrobustcmd*{\@copyrightpage}{%
+    \newpage%
+    \pdfbookmark[0]{Copyright}{CopyrightPage}%
+    \begingroup%
+    \singlespacing%
+    \vspace*{\fill}  % let latex automatically determine how much vertical space it needs
+    \noindent%
+    \begin{minipage}[c][3\baselineskip][c]{\textwidth}
+        \Centering© Copyright \@gradyear~by \@author\\ All rights reserved
+    \end{minipage}
+    \vspace{\fill}  % let latex automatically determine how much vertical space it needs
+    \endgroup%
 }
 
-% dedication
-% -----------------------------------------------
-\newrobustcmd*{\dedicationpage}{%
-    % force the layout, so users' original layouts don't matter
-    \newgeometry{top=1in, bottom=1in, left=1.25in, right=1.25in}%
-    % add to the table of contents
-    \phantomsection\addcontentsline{toc}{chapter}{Dedication}%
-    % copy the old indent setting
-    \setlength{\@oldindent}{\parindent}%
-    % enforce the indent length
-    \setlength{\parindent}{0in}%
-    % title of this specific page
-    \begin{singlespace}%
-        \begin{center}\textbf{Dedication}\\[2\baselineskip]\end{center}%
-    \end{singlespace}%
-    % content body
-    \begin{doublespace}%
-        \@dedication%
-    \end{doublespace}%
-    % restore to the old indent
-    \setlength{\parindent}{\@oldindent}%
-    % restore to users' original page layout
-    \restoregeometry%
+% =================================================================================================
+% front matter: dedication page
+% =================================================================================================
+\newrobustcmd*{\@dedicationpage}{%
+    \newpage%
+    \@addanchor{chapter}{Dedication}%
+    \chapter*{Dedication}\@dedication%
 }
 
-% acknowledgments
-% -----------------------------------------------
-\newrobustcmd*{\acknowledgmentspage}{%
-    % force the layout, so users' original layouts don't matter
-    \newgeometry{top=1in, bottom=1in, left=1.25in, right=1.25in}%
-    % add to the table of contents
-    \phantomsection\addcontentsline{toc}{chapter}{Acknowledgments}%
-    % copy the old indent setting
-    \setlength{\@oldindent}{\parindent}%
-    % enforce the indent length
-    \setlength{\parindent}{0.5in}%
-    % title of this specific page
-    \begin{singlespace}%
-        \begin{center}\textbf{Acknowledgments}\\[2\baselineskip]\end{center}%
-    \end{singlespace}%
-    % content body
-    \begin{doublespace}%
-        \@acknowledgments%
-    \end{doublespace}%
-    % restore to the old indent
-    \setlength{\parindent}{\@oldindent}%
-    % restore to users' original page layout
-    \restoregeometry%
+% =================================================================================================
+% front matter: acknowledgments page
+% =================================================================================================
+\newrobustcmd*{\@acknowledgmentspage}{%
+    \newpage%
+    \@addanchor{chapter}{Acknowledgments}%
+    \chapter*{Acknowledgments}\@acknowledgments%
 }
 
-% dedication
-% -----------------------------------------------
-\newrobustcmd*{\disclaimerpage}{%
-    % force the layout, so users' original layouts don't matter
-    \newgeometry{top=1in, bottom=1in, left=1.25in, right=1.25in}%
-    % add to the table of contents
-    \phantomsection\addcontentsline{toc}{chapter}{Disclaimer}%
-    % copy the old indent setting
-    \setlength{\@oldindent}{\parindent}%
-    % enforce the indent length
-    \setlength{\parindent}{0in}%
-    % title of this specific page
-    \begin{center}\textbf{Disclaimer}\\[2\baselineskip]\end{center}%
-    \@disclaimer%
-    % restore to the old indent
-    \setlength{\parindent}{\@oldindent}%
-    % restore to users' original page layout
-    \restoregeometry%
+% =================================================================================================
+% front matter: disclaimer page
+% =================================================================================================
+\newrobustcmd*{\@disclaimerpage}{%
+    \newpage%
+    \@addanchor{chapter}{Disclaimer}%
+    \chapter*{Disclaimer}\@disclaimer%
 }
 
-% abstract
-% -----------------------------------------------
-\newrobustcmd*{\abstractpage}{%
-    % force the layout, so users' original layouts don't matter
-    \newgeometry{top=1in, bottom=1in, left=1.25in, right=1.25in}%
-    % add to the table of contents
-    \phantomsection\addcontentsline{toc}{chapter}{Abstract of Dissertation}%
-    % headers
-    \begin{singlespace}
-        \begin{center}
-            \textbf{Abstract of Dissertation}\\[2\baselineskip]
-            \textbf{\@title}\\[2\baselineskip]  % GW says using normal font, but SEAS says boldface
-        \end{center}
-    \end{singlespace}
-    % copy the old indent setting
-    \setlength{\@oldindent}{\parindent}%
-    % enforce the indent length
-    \setlength{\parindent}{0.5in}%
-    % content body
-    \begin{doublespace}
-        \@abstract
-    \end{doublespace}
-    % restore to the old indent
-    \setlength{\parindent}{\@oldindent}%
-    % restore to users' original page layout
-    \restoregeometry%
+% =================================================================================================
+% front matter: abstract
+% =================================================================================================
+\newrobustcmd*{\@abstractpage}{%
+    \newpage%
+    \@addanchor{chapter}{Abstract of Dissertation}%
+    \chapter*{Abstract of Dissertation}
+    {\Centering\textbf{\@title}\\}%
+    \@abstract%
 }
 
-% ToC, LoF, and LoT
-% -----------------------------------------------
 
-% cheat on tocloft package so that we have more explicit controls over the format
-\@cfthaschapterfalse
+% =================================================================================================
+% front matter: table of contents (toc)
+% =================================================================================================
+\newrobustcmd*{\@tocpage}{%
+    \newpage%
+    \begingroup%
+    \singlespacing  % must be first to correctly setup \baselineskip
+    % vertical spacing before entries (to simulate double spacing)
+    \setlength{\cftbeforepartskip}{0.6\baselineskip}%
+    \setlength{\cftbeforechapskip}{0.6\baselineskip}%
+    \setlength{\cftbeforesecskip}{0.6\baselineskip}%
+    \setlength{\cftbeforesubsecskip}{0.6\baselineskip}%
+    \setlength{\cftbeforesubsubsecskip}{0.6\baselineskip}%
+    \setlength{\cftbeforeparaskip}{0.6\baselineskip}%
+    \setlength{\cftbeforesubparaskip}{0.6\baselineskip}%
+    % indent of each entries (spec not found in guidelines)
+    \setlength{\cftpartindent}{0in}%
+    \setlength{\cftchapindent}{0in}%
+    \setlength{\cftsecindent}{0.25in}%
+    \setlength{\cftsubsecindent}{0.5in}%
+    \setlength{\cftsubsubsecindent}{0.75in}%
+    \setlength{\cftparaindent}{1in}%
+    \setlength{\cftsubparaindent}{1.25in}%
+    % dots
+    \renewrobustcmd*{\cftdotsep}{1}%
+    \renewrobustcmd*{\cftchapdotsep}{\cftdotsep}%
+    % prefix: part
+    \renewrobustcmd*{\cftpartpresnum}{Part }%
+    % prefix chapter
+    \setlength{\cftchapnumwidth}{0.85in}%
+    \renewrobustcmd*{\cftchappresnum}{Chapter }%
+    \renewrobustcmd*{\cftchapaftersnum}{:}%
+    % disable the page numbers for parts
+    \cftpagenumbersoff{part}%
+    \setlength{\cftparskip}{0pt}%
+    \setlength{\parskip}{0pt}%
+    % finally show table of content
+    \@addanchor{chapter}{Table of Contents}%
+    \chapter*{Table of Contents}%
+    \singlespacing  % to revert the \doublespacing added by \chapter*
+    \vskip 0.4\baselineskip  % to compensate the \cftbeforechapskip
+    \@starttoc{toc}%
+    \endgroup%
+}
 
-% a macro to return a string that will be added to ToC and the PDF's bookmarks
-\newrobustcmd*{\@anchoredtitle}[1]{\phantomsection\addcontentsline{toc}{chapter}{#1}#1}%
 
-% the title of ToC
-\renewrobustcmd*{\contentsname}{\@anchoredtitle{Table of Contents}}
-\renewrobustcmd*{\cfttoctitlefont}{\hfill\normalsize\bfseries}
-\renewrobustcmd*{\cftaftertoctitle}{\hfill}
-\setlength{\cftbeforetoctitleskip}{0\baselineskip}
-\setlength{\cftaftertoctitleskip}{0\baselineskip}
+% =================================================================================================
+% front matter: list of figures (lof)
+% =================================================================================================
+\newrobustcmd*{\@lofpage}{%
+    \newpage%
+    \begingroup%
+    \singlespacing  % must be first to correctly setup \baselineskip
+    \setlength{\cftbeforefigskip}{\baselineskip}  % to simulate double spacing
+    \setlength{\cftfigindent}{0in}  % entry indent (spec not found in guidelines)
+    \setlength{\cftfignumwidth}{1in}  % label width (spec not found in guidelines)
+    \renewrobustcmd*{\cftdotsep}{1}  %% dots
+    \renewrobustcmd*{\cftfigpresnum}{Figure }  % label prefix
+    \@addanchor{chapter}{List of Figures}
+    \chapter*{List of Figures}%
+    \singlespacing  % to revert the \doublespacing added by \chapter*
+    \@starttoc{lof}  % show lof
+    \endgroup%
+}
 
-% the title of LoF
-\renewrobustcmd*{\listfigurename}{\@anchoredtitle{List of Figures}}
-\renewrobustcmd*{\cftloftitlefont}{\hfill\normalsize\bfseries}
-\renewrobustcmd*{\cftafterloftitle}{\hfill}
-\setlength{\cftbeforeloftitleskip}{0\baselineskip}
-\setlength{\cftafterloftitleskip}{0\baselineskip}
 
-% the title of LoT
-\renewrobustcmd*{\listtablename}{\@anchoredtitle{List of Tables}}
-\renewrobustcmd*{\cftlottitlefont}{\hfill\normalsize\bfseries}
-\renewrobustcmd*{\cftafterlottitle}{\hfill}
-\setlength{\cftbeforelottitleskip}{0\baselineskip}
-\setlength{\cftafterlottitleskip}{0\baselineskip}
+% =================================================================================================
+% front matter: list of tables (lot)
+% =================================================================================================
+\newrobustcmd*{\@lotpage}{%
+    \newpage%
+    \begingroup%
+    \singlespacing  % must be first to correctly setup \baselineskip
+    \setlength{\cftbeforetabskip}{\baselineskip}  % to simulate double spacing
+    \setlength{\cfttabindent}{0in}  % entry indent (spec not found in guidelines)
+    \setlength{\cfttabnumwidth}{1in}  % label width (spec not found in guidelines)
+    \renewrobustcmd*{\cftdotsep}{1}  % dots
+    \renewrobustcmd*{\cfttabpresnum}{Table }  % label prefix
+    \@addanchor{chapter}{List of Tables}
+    \chapter*{List of Tables}%
+    \singlespacing  % to revert the \doublespacing added by \chapter*
+    \@starttoc{lot}  % show lot
+    \endgroup%
+}
 
-% vertical spacing before entries (spec not found in any GW formatting guideline)
-\setlength{\cftbeforepartskip}{0\baselineskip}
-\setlength{\cftbeforechapskip}{0\baselineskip}
-\setlength{\cftbeforesecskip}{0\baselineskip}
-\setlength{\cftbeforesubsecskip}{0\baselineskip}
-\setlength{\cftbeforesubsubsecskip}{0\baselineskip}
-\setlength{\cftbeforeparaskip}{0\baselineskip}
-\setlength{\cftbeforesubparaskip}{0\baselineskip}
-\setlength{\cftbeforefigskip}{0\baselineskip}
-\setlength{\cftbeforetabskip}{0\baselineskip}
 
-% indent of each entries (spec not found in any GW formatting guideline)
-\setlength{\cftpartindent}{0in}
-\setlength{\cftchapindent}{0in}
-\setlength{\cftsecindent}{0.1in}
-\setlength{\cftsubsecindent}{0.2in}
-\setlength{\cftsubsubsecindent}{0.3in}
-\setlength{\cftparaindent}{0.4in}
-\setlength{\cftsubparaindent}{0.5in}
-\setlength{\cftfigindent}{0in}
-\setlength{\cfttabindent}{0in}
+% =================================================================================================
+% front matter: list of symbols (los)
+% =================================================================================================
+\newrobustcmd*{\@lospage}{%
+    \begingroup%
+    \newpage%
+    \renewenvironment{thenomenclature}{%
+        \begin{description}[%
+            left=0pt, style=multiline, topsep=0pt, partopsep=0pt, itemsep=0pt,%
+            parsep=\baselineskip]%
+    }{%
+        \end{description}%
+    }%
+    \@addanchor{chapter}{List of Symbols}%
+    \chapter*{List of Symbols}%
+    \singlespacing%
+    \vskip \baselineskip%
+    \printnomenclature%
+    \endgroup%
+}
 
-% single spacing inside each entry (happens when a chap/sec/subsec title is too long)
-\let\@old@l@chapter\l@chapter
-\let\@old@l@section\l@section
-\let\@old@l@subsection\l@subsection
-\let\@old@l@subsubsection\l@subsubsection
-\renewrobustcmd*{\l@chapter}[2]{\singlespacing\@old@l@chapter{#1}{#2}\doublespacing}
-\renewrobustcmd*{\l@section}[2]{\singlespacing\@old@l@section{#1}{#2}\doublespacing}
-\renewrobustcmd*{\l@subsection}[2]{\@old@l@subsection{#1}{#2}\doublespacing}
-\renewrobustcmd*{\l@subsubsection}[2]{\singlespacing\@old@l@subsubsection{#1}{#2}\doublespacing}
 
-% dots
-\renewrobustcmd*{\cftdotsep}{1}
-\renewrobustcmd*{\cftchapdotsep}{\cftdotsep}
+% =================================================================================================
+% front matter: preface
+% =================================================================================================
+\newrobustcmd*{\@prefacepage}{%
+    \newpage%
+    \@addanchor{chapter}{Preface}%
+    \chapter*{Preface}\@preface%
+}
 
-% prefix: part
-\renewrobustcmd*{\cftpartpresnum}{Part }
 
-% prefix chapter
-\setlength{\cftchapnumwidth}{0.85in}
-\renewrobustcmd*{\cftchappresnum}{Chapter }
-\renewrobustcmd*{\cftchapaftersnum}{:}
-
-% disable the page numbers for parts
-\cftpagenumbersoff{part}
-
+% =================================================================================================
 % custom appendix in the table of content and in the content
-% -----------------------------------------------------------------------------
+% =================================================================================================
 \renewcommand*{\appendix}{%
     % write `\renewrobustcmd*{\cftchapnumwidth}{0.96in}` to the *.toc file
     \addtocontents{toc}{%
@@ -512,7 +509,7 @@
         \protect\renewrobustcmd*{\protect\cftpartpresnum}{}%
     }%
     \phantomsection  % add a virtual section so we can get a bookmark anchor
-    \addcontentsline{toc}{part}{Appendices}  % add `Appendices` as a part in ToC
+    %\addcontentsline{toc}{part}{Appendices}  % add `Appendices` as a part in ToC
     \stepcounter{part}  % advance the part counter because `Appendices` serves as a Part
     \renewcommand\chaptername{Appendix}  % change the chapter prefix from Chapter to Appendix
     \setcounter{chapter}{0}  % reset chapter counter because now the chapters represent appendices
@@ -521,29 +518,22 @@
 
 
 % =================================================================================================
-% end-user command to show front pages
-% =================================================================================================
-\newrobustcmd*{\frontpages}{%
-    \titlepage%
-    \certpage%
-    \copyrightpage%
-    \ifshowdedication\dedicationpage\fi%
-    \ifshowacknowledgments\acknowledgmentspage\fi%
-    \ifshowdisclaimer\disclaimerpage\fi%
-    \abstractpage%
-    \tableofcontents%
-    \newpage%
-    \ifshowlof\listoffigures\fi%
-    \newpage%
-    \ifshowlot\listoftables\fi%
-}
-
-
-% =================================================================================================
 %% things to be automatically added after `\begin{document}`
 % =================================================================================================
 \AtBeginDocument{%
-    \frontpages
+    \ifshowtitle\@titlepage\fi%
+    \ifshowcertification\@certpage\fi%
+    \ifshowcopyright\@copyrightpage\fi%
+    \ifshowdedication\@dedicationpage\fi%
+    \ifshowacknowledgments\@acknowledgmentspage\fi%
+    \ifshowdisclaimer\@disclaimerpage\fi%
+    \ifshowabstract\@abstractpage\fi%
+    \ifshowtoc\@tocpage\fi%
+    \ifshowlof\@lofpage\fi%
+    \ifshowlot\@lotpage\fi%
+    \ifshowlos\@lospage\fi%
+    %\ifshowglossary\newpage\glossary\fi%
+    \ifshowpreface\@prefacepage\fi%
     \newpage%
     \pagenumbering{arabic}  % restart page counter using arabic numerals
 }
@@ -554,6 +544,15 @@
 % =================================================================================================
 \if@classopts@debug%
     \geometry{showframe}%
+    \RequirePackage{eso-pic}%
+    \RequirePackage{tikz}
+    \AddToShipoutPictureBG{%
+        \begin{tikzpicture}[opacity=0.25]%
+            \filldraw[step=0.2in, line width=0.4pt, BlueGreen] (0pt, 0pt) grid (\paperwidth, \paperheight);%
+            \filldraw[step=1in, line width=0.75pt, BlueGreen] (0pt, 0pt) grid (\paperwidth, \paperheight);%
+        \end{tikzpicture}%
+    }%
+    \hypersetup{hidelinks}%
 \else%
     \hypersetup{hidelinks}%
 \fi
