fine tune the skips of titles at different levels

--- a/example/main.tex
+++ b/example/main.tex
@@ -44,13 +44,13 @@ Note that each level is indented in a $1/4$ inch (or two dots to the right on th
 the last section header. 
 
     \section{Second Level Header}
-    Start your text here.
+    \lipsum[3]
 
     \section{Second Level Header}
-    Start your text here.
+    \lipsum[4]
 
         \subsection{Third Level Header}
-        Start your text here.
+        \lipsum[5-6]
 
             \subsubsection{Fourth Level Header}
             Start your text here.
